--- a/Sign-in.css
+++ b/Sign-in.css
@@ -21,7 +21,7 @@ header h1 {
     font-size: 40px;
 }
 
-input[type="text"] {
+header input[type="text"] {
     width: 300px;
     height: 16.2px;
     padding: 10px;
