--- a/home.css
+++ b/home.css
@@ -70,7 +70,7 @@
             font-size: 1.2em;
             margin-top: 10px;
         }
-        .front button {
+        .front a {
             padding: 15px 20px;
             background-color: #8b0000;
             color: white;
@@ -80,8 +80,9 @@
             font-size: 1.2em;
             width: 200px;;
             font-weight: bold;
+            text-decoration: none;
         }
-        .front button:hover {
+        .front a:hover {
             background-color: #4a0004;
         }
         footer {
